--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Sep 13 20:32:24 IST 2021
-sdk.dir=/Users/pramudithamaheshakkya/Library/Android/sdk
+#Sun Sep 26 18:29:37 IST 2021
+sdk.dir=C\:\\Users\\Prabhath Madusanka\\AppData\\Local\\Android\\Sdk
 ndk.dir=/home/two-words-37/Android/Sdk/ndk-bundle
