--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Sep 26 19:09:19 IST 2021
-sdk.dir=C\:\\Users\\Thilina\\AppData\\Local\\Android\\Sdk
+#Sat Oct 02 20:35:39 IST 2021
+sdk.dir=/Users/pramudithamaheshakkya/Library/Android/sdk
 ndk.dir=/home/two-words-37/Android/Sdk/ndk-bundle
